# gan1d

./: gen_fake.py  gen_real.py  pyproject.toml  simple1.py
