[tool.poetry]
name = "gan1d"
version = "0.1.0"
description = ""
authors = ["sixoseven <mdcbowen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
matplotlib = "^3.7.1"
numpy = ">=1.22,<1.24"
tensorflow = ">2.9,<2.11"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
